libteng (5.0.0) UNRELEASED; urgency=medium

  * Added support for custom filesystem.

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Mon, 18 Feb 2019 15:54:07 +0000

libteng (4.0.8) stable; urgency=medium

  * fix: the broken functionality of function dump introduced in version 4.0.0

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Wed, 27 Nov 2019 15:42:46 +0000

libteng (4.0.7) stable; urgency=low

  * Revert "fix args order of user defined functions"
  * 
  * This reverts commit 833ba33dc233b220b23bfbcc295618a0e6603e7f.

 -- Michal Bukovsky <michal.bukovsky@firma.seznam.cz>  Wed, 05 Jun 2019 14:48:29 +0100

libteng (4.0.6) stable; urgency=low

  * new version (this entry was autogenerated by email-buildpackage)

 -- Michal Bukovsky <michal.bukovsky@firma.seznam.cz>  Tue, 04 Jun 2019 14:30:02 +0100

libteng (4.0.5~burloglibteng4-1) stable; urgency=low

  * fix args order of user defined functions
  * add utf-8 substr test
  * Save fuzzer exit code and re-use it later (#12)
  * 
  * Use saved exit code to indicate success or failure (useful for CI jobs).
  * fix allocation source code for block consisting from multiple blocks
  * for invalid data the end pointer can be smaller than begin one
  * -O2 -> -O3
  * ignore glib in coverage
  * extending fuzzer dict
  * fix crash if define directive is last, fix short teng directives syntax
  * _parent implementation
  * type queries
  * tests for print escaping
  * fix method names
  * fix libteng.pc

 -- Michal Bukovsky <michal.bukovsky@firma.seznam.cz>  Tue, 04 Jun 2019 12:05:16 +0100

libteng (4.0.5) stable; urgency=low

  * rc1

 -- Michal Bukovsky <michal.bukovsky@firma.seznam.cz>  Wed, 12 Dec 2018 13:42:44 +0100

libteng (4.0.4) stable; urgency=low

  * template inheritance

 -- Michal Bukovsky <michal.bukovsky@firma.seznam.cz>  Tue, 10 Dec 2018 6:42:44 +0100

libteng (4.0.3) stable; urgency=low

  * fixed another tone of bugs
